tests/ui/parser/doc-comment-in-if-statement.rs
fn main() {
    if true /*!*/ {}
    //~^ ERROR outer attributes are not allowed on
    //~| ERROR expected outer doc comment
}
